<resources>
    <string name="app_name">MessagingAppDemo</string>
    <string name="username">USER_NAME</string>
    <string name="message">Message</string>
    <string name="textview">TextView</string>
    <string name="continued">Continue</string>
    <string name="enter_a_name">Enter a name!</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="yektide_messenger">Yektide Messenger</string>
    <string name="begin_chatting">Begin Chatting</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="ocean_theme">Ocean Theme</string>
    <string name="enter_your_info_below">Enter your info below</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="bio">BIO</string>
    <string name="have_a_account_click_here">Have a account? Click here</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="make_a_account">Make a account</string>
    <string name="your_profile">Your Profile :)</string>
    <string name="email">Email:</string>
    <string name="public">Public</string>
</resources>
